src/test/deca/context/valid/class/calls/method_call.deca
// Description:
//    Appel d'une méthode de classe dans le main
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {
	A a() {
		a();
		return new A();
	}
	void b(Object a) {

	}
	A c(int a, float b) {
		return this;
	}
}

{
	A a = new A();
	a = a.a();
    a = a.a().a();
    a = a.c(5, 6.2);
    a.b(new Object());
    a.b(a);
    a.b(new A());
}

