src/test/deca/context/invalid/class/autoreference/float.deca
// Description:
//    Affectation de this à un float
//
// Resultats:
//    Incompatile type
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
		float a = this;
	}
}

{

}

